--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form">
-    <h2>Alta cliente :</h2>
+    <h2>Formulario de contacto :</h2>
     <div class="form-group row">
     <label class="col-sm-2 col-form-label" for="name">Nombre</label>
     <input type="text" class="form-control col-sm-2" id="name" formControlName="name">
