--- a/src/app/listado/listado.component.html
+++ b/src/app/listado/listado.component.html
@@ -1,4 +1,4 @@
-<h2 class="mt-3">Listado clientes</h2>
+<h2 class="mt-3">Mensajes</h2>
 <table class="table  table-striped">
     <thead>
       <tr>
